--- a/builds/nextgen/index.html
+++ b/builds/nextgen/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <svg class="defs-only" height="0" width="0" style="display:block" xmlns="http://www.w3.org/2000/svg">
+  <!-- SVG Symbols -->
   <symbol id="androidphone" >
         <g id="Background">
             <radialGradient id="SVGID_1_" cx="227.4223" cy="-4195.8872" r="240.1727" gradientTransform="matrix(1.03 0 0 2.125 -8.145 9376.3105)" gradientUnits="userSpaceOnUse">
@@ -277,14 +278,14 @@
           <a href="#ask">ask a vet</a>
           <a href="#showcase">showcase</a>
       </div><!-- navbar -->
-  </nav>
+  </nav><!-- nav -->
 
   <div class="header-info">
     <h1 class="header-info-headline">Your pet’s health care</h1>
     <h3 class="header-info-subheadline">right at your fingertips</h3>
     <p class="header-info-text">It’s never been easier to make your pet’s wellness a priority. The Wisdom Pet App makes <a href="#profile">organizing information</a>, <href="#history">tracking history</a> and <a href="#schedule">scheduling visits</a> a breeze. You can even <a href="#chat">chat with our vets</a> and earn discounts for <a href="#">showcasing your pet</a>.</p>
-  </div><!-- container -->
-</header><!-- #home -->
+  </div><!-- header-info -->
+</header><!-- #header -->
 
 <section id="profile" class="feature">
     <div class="feature-description">
@@ -295,8 +296,8 @@
           <li>Include recent images of your pet</li>
           <li>Store information for your pets</li>
         </ul>
-      </div><! -- feature-description-text -->
-    </div><! -- feature-description -->
+      </div><!-- feature-description-text -->
+    </div><!-- feature-description -->
     <sidebar class="feature-phone">
       <svg style="width: 452px; height: 920px;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 452.2 920.1" style="enable-background:new 0 0 452.2 920.1;" xml:space="preserve">
           <use xlink:href="#androidphone"/>
@@ -307,9 +308,9 @@
               </div>
             </foreignObject>
           </g>
-      </svg>
-    </sidebar>
-</section><!-- #profile -->
+      </svg><!-- phone svg -->
+    </sidebar><!-- feature-phone -->
+</section><!-- profile feature -->
 
 <section id="history" class="feature">
     <div class="feature-description">
@@ -328,9 +329,9 @@
               </div>
             </foreignObject>
           </g>
-      </svg>
-    </sidebar>
-</section><!-- #history -->
+      </svg><!-- phone svg -->
+    </sidebar><!-- feature-phone -->
+</section><!-- history feature -->
 
 <section id="schedule" class="feature">
     <div class="feature-description">
@@ -350,9 +351,9 @@
               </div>
             </foreignObject>
           </g>
-      </svg>
-    </sidebar>
-</section><!-- #history -->
+      </svg><!-- phone svg -->
+    </sidebar><!-- feature-phone -->
+</section><!-- schedule feature -->
 
 <section id="ask" class="feature">
     <div class="feature-description">
@@ -372,9 +373,9 @@
               </div>
             </foreignObject>
           </g>
-      </svg>
-    </sidebar>
-</section><!-- #history -->
+      </svg><!-- phone svg -->
+    </sidebar><!-- feature-phone -->
+</section><!-- ask feature -->
 
 <section id="showcase" class="feature">
     <div class="feature-description">
@@ -393,9 +394,9 @@
               </div>
             </foreignObject>
           </g>
-      </svg>
-    </sidebar>
-</section><!-- #history -->
+      </svg><!-- phone svg -->
+    </sidebar><!-- feature-phone -->
+</section><!-- showcase feature -->
 
 <footer class="footer">
     <div class="footer-elements">
@@ -404,13 +405,15 @@
           <svg version="1.1" class="wisdompetlogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 226 196.9" style="enable-background:new 0 0 226 196.9;" xml:space="preserve">
             <use xlink:href="#widsompetlogo"/>
           </svg>
+        </div><!-- footer-logo -->
+        <div class="footer-address">
+          100 Main Street - Seattle, WA 98144
         </div>
-        <div class="footer-address">100 Main Street - Seattle, WA 98144</div>
       </div><!-- footer-top -->
       <div class="footer-bottom">
         <p class="legal">Wisdom Pet is a fictitious brand created by lynda.com solely for the purpose of training. All products and people associated with Wisdom Pet are also fictitious. Any resemblance to real brands, products, or people is purely coincidental. Information provided about the product is also fictitious and should not be construed to be representative of actual products on the market in a similar product category.</p>
-      </div>
-    </div>
+      </div><!-- footer-bottom -->
+    </div><!-- footer-elements -->
 </footer><!-- footer -->
 <script src="js/gumshoe.min.js"></script>
 <script>
