--- a/builds/nextgen/index.html
+++ b/builds/nextgen/index.html
@@ -21,14 +21,14 @@
           <a href="#ask">ask a vet</a>
           <a href="#showcase">showcase</a>
       </div><!-- navbar -->
-  </nav>
+  </nav><!-- nav -->
 
   <div class="header-info">
     <h1 class="header-info-headline">Your pet’s health care</h1>
     <h3 class="header-info-subheadline">right at your fingertips</h3>
     <p class="header-info-text">It’s never been easier to make your pet’s wellness a priority. The Wisdom Pet App makes <a href="#profile">organizing information</a>, <href="#history">tracking history</a> and <a href="#schedule">scheduling visits</a> a breeze. You can even <a href="#chat">chat with our vets</a> and earn discounts for <a href="#">showcasing your pet</a>.</p>
-  </div><!-- container -->
-</header><!-- #home -->
+  </div><!-- header-info -->
+</header><!-- #header -->
 
 <section id="profile" class="feature">
     <div class="feature-description">
@@ -39,12 +39,12 @@
           <li>Include recent images of your pet</li>
           <li>Store information for your pets</li>
         </ul>
-      </div><! -- feature-description-text -->
-    </div><! -- feature-description -->
+      </div><!-- feature-description-text -->
+    </div><!-- feature-description -->
     <sidebar class="feature-phone">
       <img src="images/androidphone.svg" width="250" alt="Android Phone">
-    </sidebar>
-</section><!-- #profile -->
+    </sidebar><!-- feature-phone -->
+</section><!-- profile feature -->
 
 <section id="history" class="feature">
     <div class="feature-description">
@@ -55,8 +55,8 @@
     </div><! -- feature-description -->
     <sidebar class="feature-phone">
       <img src="images/androidphone.svg" width="250" alt="Android Phone">
-    </sidebar>
-</section><!-- #history -->
+    </sidebar><!-- feature-phone -->
+</section><!-- history feature -->
 
 <section id="schedule" class="feature">
     <div class="feature-description">
@@ -68,8 +68,8 @@
     </div><! -- feature-description-text -->
     <sidebar class="feature-phone">
       <img src="images/androidphone.svg" width="250" alt="Android Phone">
-    </sidebar>
-</section><!-- #history -->
+    </sidebar><!-- feature-phone -->
+</section><!-- ask feature -->
 
 <section id="ask" class="feature">
     <div class="feature-description">
@@ -81,8 +81,8 @@
     </div><! -- feature-description -->
     <sidebar class="feature-phone">
       <img src="images/androidphone.svg" width="250" alt="Android Phone">
-    </sidebar>
-</section><!-- #history -->
+    </sidebar><!-- feature-phone -->
+</section><!-- ask feature -->
 
 <section id="showcase" class="feature">
     <div class="feature-description">
@@ -93,8 +93,8 @@
     </div><! -- feature-description -->
     <sidebar class="feature-phone">
       <img src="images/androidphone.svg" width="250" alt="Android Phone">
-    </sidebar>
-</section><!-- #history -->
+    </sidebar><!-- feature-phone -->
+</section><!-- showcase feature -->
 
 <footer class="footer">
     <div class="footer-elements">
@@ -102,12 +102,14 @@
         <div class="footer-logo">
         <img src="images/wisdompetlogo.svg" width="100" alt="Android Phone">
         </div>
-        <div class="footer-address">100 Main Street - Seattle, WA 98144</div>
+        <div class="footer-address">
+          100 Main Street - Seattle, WA 98144
+        </div>
       </div><!-- footer-top -->
       <div class="footer-bottom">
         <p class="legal">Wisdom Pet is a fictitious brand created by lynda.com solely for the purpose of training. All products and people associated with Wisdom Pet are also fictitious. Any resemblance to real brands, products, or people is purely coincidental. Information provided about the product is also fictitious and should not be construed to be representative of actual products on the market in a similar product category.</p>
-      </div>
-    </div>
+      </div><!-- footer-bottom -->
+    </div><!-- footer-elements -->
 </footer><!-- footer -->
 </body>
 </html>
