--- a/builds/nextgen/index.html
+++ b/builds/nextgen/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PostCSS Layouts</title>
+  <title>Next Generation CSS</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
 </head>
