--- a/builds/nextgen/index.html
+++ b/builds/nextgen/index.html
@@ -11,7 +11,7 @@
   <nav class="nav" role="navigation">
       <div class="branding">
         <a href="#home">
-          <img src="images/wisdompetlogo.svg" width="100" alt="Wisdom Pet Logo">
+          <img src="images/wisdompetlogo.svg" alt="Wisdom Pet Logo">
         </a>
       </div><!-- branding -->
       <div class="navbar">
