--- a/builds/nextgen/index.html
+++ b/builds/nextgen/index.html
@@ -100,7 +100,7 @@
     <div class="footer-elements">
       <div class="footer-top">
         <div class="footer-logo">
-        <img src="images/wisdompetlogo.svg" width="100" alt="Android Phone">
+          <img src="images/wisdompetlogo.svg" alt="Android Phone">
         </div>
         <div class="footer-address">
           100 Main Street - Seattle, WA 98144
