--- a/builds/nextgen/index.html
+++ b/builds/nextgen/index.html
@@ -293,6 +293,13 @@
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
         <use xlink:href="#androidphone" />
+        <g class="video">
+          <foreignObject x="12.1" y="85" width="430" height="778">
+            <div class="videoplaceholder">
+              <video src="images/videos/pets.mov" autoplay loop />
+            </div>
+          </foreignObject>
+        </g>
       </svg>
     </sidebar><!-- feature-phone -->
 </section><!-- profile feature -->
@@ -308,6 +315,13 @@
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
         <use xlink:href="#androidphone" />
+        <g class="video">
+          <foreignObject x="12.1" y="85" width="430" height="778">
+            <div class="videoplaceholder">
+              <video src="images/videos/history.mov" autoplay loop />
+            </div>
+          </foreignObject>
+        </g>
       </svg>
     </sidebar><!-- feature-phone -->
 </section><!-- history feature -->
@@ -324,6 +338,13 @@
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
         <use xlink:href="#androidphone" />
+        <g class="video">
+          <foreignObject x="12.1" y="85" width="430" height="778">
+            <div class="videoplaceholder">
+              <video src="images/videos/schedule.mov" autoplay loop />
+            </div>
+          </foreignObject>
+        </g>        
       </svg>
     </sidebar><!-- feature-phone -->
 </section><!-- ask feature -->
@@ -340,6 +361,13 @@
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
         <use xlink:href="#androidphone" />
+        <g class="video">
+          <foreignObject x="12.1" y="85" width="430" height="778">
+            <div class="videoplaceholder">
+              <video src="images/videos/ask.mov" autoplay loop />
+            </div>
+          </foreignObject>
+        </g>
       </svg>
     </sidebar><!-- feature-phone -->
 </section><!-- ask feature -->
@@ -355,6 +383,13 @@
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
         <use xlink:href="#androidphone" />
+        <g class="video">
+          <foreignObject x="12.1" y="85" width="430" height="778">
+            <div class="videoplaceholder">
+              <video src="images/videos/showcase.mov" autoplay loop />
+            </div>
+          </foreignObject>
+        </g>
       </svg>
     </sidebar><!-- feature-phone -->
 </section><!-- showcase feature -->
