small fixes to html

--- a/builds/nextgen/index.html
+++ b/builds/nextgen/index.html
@@ -274,7 +274,7 @@
   <div class="header-info">
     <h1 class="header-info-headline">Your pet’s health care</h1>
     <h3 class="header-info-subheadline">right at your fingertips</h3>
-    <p class="header-info-text">It’s never been easier to make your pet’s wellness a priority. The Wisdom Pet App makes <a href="#profile">organizing information</a>, <href="#history">tracking history</a> and <a href="#schedule">scheduling visits</a> a breeze. You can even <a href="#chat">chat with our vets</a> and earn discounts for <a href="#">showcasing your pet</a>.</p>
+    <p class="header-info-text">It’s never been easier to make your pet’s wellness a priority. The Wisdom Pet App makes <a href="#profile">organizing information</a>, <a href="#history">tracking history</a> and <a href="#schedule">scheduling visits</a> a breeze. You can even <a href="#chat">chat with our vets</a> and earn discounts for <a href="#">showcasing your pet</a>.</p>
   </div><!-- header-info -->
 </header><!-- #header -->
 
@@ -309,8 +309,8 @@
       <h2 class="feature-description-headline">Track your pet’s medical history</h2>
       <div class="feature-description-text">
         <p>Know when your pet last visited the vet, what tests and treatments were recommended, and when he’s due for vaccines and routine health checks.</p>
-      </div><! -- feature-description-text -->
-    </div><! -- feature-description -->
+      </div><!-- feature-description-text -->
+    </div><!-- feature-description -->
     <sidebar class="feature-phone">
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
@@ -332,8 +332,8 @@
       <div class="feature-description-text">
         <p>Scheduling regular health checkups for your pet has never been easier. Upcoming appointments for all your pets appear on a single screen.</p>
       <p>With one click, you can confirm or cancel the appointment. You can even select a date to reschedule.</p>
-      </div><! -- feature-description-text -->
-    </div><! -- feature-description-text -->
+      </div><!-- feature-description-text -->
+    </div><!-- feature-description-text -->
     <sidebar class="feature-phone">
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
@@ -355,8 +355,8 @@
       <div class="feature-description-text">
         <p>Keep the lines of communication open with the Wisdom Pet Medicine staff<p>
         <p>Submit questions about your pet’s symptoms, treatments, and medications. Your questions will be answered promptly, within normal business hours.</p>
-      </div><! -- feature-description-text -->
-    </div><! -- feature-description -->
+      </div><!-- feature-description-text -->
+    </div><!-- feature-description -->
     <sidebar class="feature-phone">
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
@@ -377,8 +377,8 @@
       <h2 class="feature-description-headline">Earn discounts for showcasing your pet</h2>
       <div class="feature-description-text">
         <p>Every week, our Wisdom Pet App users pick their favorites from the pets who’ve been seen in our clinic the previous week. The pet with the most votes receives $100 off their next visit.</p>
-      </div><! -- feature-description-text -->
-    </div><! -- feature-description -->
+      </div><!-- feature-description-text -->
+    </div><!-- feature-description -->
     <sidebar class="feature-phone">
       <svg style="width: 452px; height: 920px" version="1.1" id="Phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 452 920" style="enable-background:new 0 0 452 920;" xml:space="preserve">
